new working buttons

--- a/pomodoro/popup.html
+++ b/pomodoro/popup.html
@@ -6,7 +6,7 @@
     <body>
         
         <img src="images/royalty_free_anime_girl.png" alt="" width="350" height="400">
-        <h1 class = "title">Pomodoro Timer</h1>
+        <h1 class = "title">Timer</h1>
 
         <div class="circle">
             <span class="time" id="time-display">00:00:00</span>
