added options html + button"

--- a/pomodoro/popup.html
+++ b/pomodoro/popup.html
@@ -19,8 +19,8 @@
         </div>
         
 
-        <button class="gear" id="close-image"><img src="/images/gear.png"></button>
         
+        <a href="/options.html" class="button"><img src="/images/gear.png" width = "25" height = "25"></a>
         <script src="timer.js"></script>
     </body>
 
