--- a/pomodoro/popup.html
+++ b/pomodoro/popup.html
@@ -24,7 +24,7 @@
         
 
         
-        <a href="/options.html" class="button"><img src="/images/gear.png" width = "25" height = "25"></a>
+        <a href="/change_background.html" class="button"><img src="/images/gear.png" width = "25" height = "25"></a>
         <script src="timer.js"></script>
     </body>
 
