--- a/pomodoro/change_background.html
+++ b/pomodoro/change_background.html
@@ -32,7 +32,7 @@
         </div>
 
         
-        <a href="/options.html" class="button"><img src="/images/gear.png" width = "25" height = "25"></a>
+        <a href="/popup.html" class="button"><img src="/images/back_arrow.png" width = "25" height = "25"></a>
         <script src="timer.js"></script>
     </body>
 </html>
