--- a/pomodoro/change_background.html
+++ b/pomodoro/change_background.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="timer.css"> 
+        <link rel="stylesheet" href="options.css"> 
     </head>
     <body>
         <h1 class = "title">Settings</h1>
@@ -33,6 +33,6 @@
 
         
         <a href="/popup.html" class="button"><img src="/images/back_arrow.png" width = "25" height = "25"></a>
-        <script src="timer.js"></script>
+        
     </body>
 </html>
