added break html

--- a/pomodoro/change_intervals.html
+++ b/pomodoro/change_intervals.html
@@ -9,12 +9,10 @@
 
         <div class="interval-presets">
             <p>Time Intervals</p>
-            <button id="interval-1">Interval 1</button>
-            <button id="interval-2">Interval 2</button>
-            <button id="interval-3">Interval 3</button>
-            <button id="interval-4">Interval 4</button>
-            <button id="interval-5">Interval 5</button>
-            <button id="interval-6">Interval 6</button>   
+            <button id="interval-30m">30 min</button>
+            <button id="interval-45m">45 min</button>
+            <button id="interval-1h">1 hr</button>
+            <button id="interval-2h">2 hrs</button>   
         </div>
 
         <div class="custom-time">
@@ -35,6 +33,6 @@
 
         
         <a href="/popup.html" class="button"><img src="/images/back_arrow.png" width = "25" height = "25"></a>
-        
+        <script src="timer.js"></script>
     </body>
 </html>
