link int and bkg settings to timer.css and some formatting

--- a/pomodoro/change_intervals.html
+++ b/pomodoro/change_intervals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="options.css"> 
+        <link rel="stylesheet" href="timer.css"> 
     </head>
     <body>
         <h1 class = "title">Settings</h1>
@@ -24,7 +24,7 @@
                 <input type="number" id="work-interval" name="work-interval"><br><br>
                 <label for="break-interval">Break time (minutes): </label>
                 <input type="number" id="break-interval" name="break-interval"><br><br>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Set Time">
             </form>
             
             <p>Click on the submit button to submit the form.</p>
