Implemented preset timer buttons

--- a/pomodoro/change_intervals.html
+++ b/pomodoro/change_intervals.html
@@ -27,6 +27,6 @@
         </div>
         
         <a href="/popup.html" class="button"><img src="/images/back_arrow.png" width = "25" height = "25"></a>
-        <script src="timer.js"></script>
+        <script src="change_interval.js"></script>
     </body>
 </html>
