--- a/pomodoro/popup.html
+++ b/pomodoro/popup.html
@@ -9,7 +9,7 @@
         <h1 class = "title" id = "title">Work Time!</h1>
 
         <div class="circle">
-            <span class="time" id="time-display">00:00:00</span>
+            <span class="time" id="time-display"></span>
         </div>
 
         <div class="timer-buttons">
