new settings/back icon and font adjust

--- a/pomodoro/popup.html
+++ b/pomodoro/popup.html
@@ -26,7 +26,7 @@
 
 
         
-        <a href="/change_background.html" class="button"><img src="/images/gear.png" width = "25" height = "25"></a>
+        <a href="/change_background.html" class="gear"><img src="/images/gear.png" width = "25" height = "25"></a>
         <script src="timer.js"></script>
     </body>
 
