--- a/pomodoro/change_background.html
+++ b/pomodoro/change_background.html
@@ -38,7 +38,7 @@
         </div>
 
         
-        <a href="/popup.html" class="button"><img src="/images/back_arrow.png" width = "25" height = "25"></a>
+        <a href="/popup.html" class="button"><img src="/images/back_arrow_2.png" width = "25" height = "25"></a>
         <script src="change_background.js"></script>
     </body>
 </html>
