--- a/pomodoro/change_background.html
+++ b/pomodoro/change_background.html
@@ -24,16 +24,16 @@
             
             <p>Anime</p>
             <div class="bg-category">
-                <button id="bg-7" style="background: url('/images/zero_two_4.jpg')">ZeroTwo</button>
-                <button id="bg-8" style="background: url('/images/tanjiro.jpg')">Tanjiro</button>
-                <button id="bg-9" style="background: url('/images/your_name.jpg')">Your Name</button>
+                <button id="bg-7" style="background: url('/images/zero_two_icon.jpg'); background-size: 100px 50px;">ZeroTwo</button>
+                <button id="bg-8" style="background: url('/images/tanjiro_icon.jpg'); background-size: 100px 50px;">Tanjiro</button>
+                <button id="bg-9" style="background: url('/images/your_name_icon.jpg'); background-size: 100px 50px;">Your Name</button>
             </div>
             
             <p>Other</p>
             <div class="bg-category">
-                <button id="bg-10" style="background: url('/images/nature.jpg')">Nature</button>
-                <button id="bg-11" style="background: url('/images/modern.webp')">Modern</button>
-                <button id="bg-12" style="background: url('/images/abstract.jpg')">Abstract</button>
+                <button id="bg-10" style="background: url('/images/nature_icon.jpg'); background-size: 100px 50px;">Nature</button>
+                <button id="bg-11" style="background: url('/images/modern.webp'); background-size: 100px 50px;">Modern</button>
+                <button id="bg-12" style="background: url('/images/abstract_icon.jpg'); background-size: 100px 50px;">Abstract</button>
             </div>
         </div>
 
