WIP adding break time presets

--- a/pomodoro/change_intervals.html
+++ b/pomodoro/change_intervals.html
@@ -9,10 +9,10 @@
 
         <div class="interval-presets">
             <p>Work Time Intervals</p>
-            <button id="interval-30m">30 min</button>
-            <button id="interval-45m">45 min</button>
-            <button id="interval-1h">1 hr</button>
-            <button id="interval-2h">2 hrs</button>
+            <button id="work-30m">30 min</button>
+            <button id="work-45m">45 min</button>
+            <button id="work-1h">1 hr</button>
+            <button id="work-2h">2 hrs</button>
         </div>
 
         <div class="interval-presets">
