Finished initial custom times

--- a/pomodoro/break.html
+++ b/pomodoro/break.html
@@ -10,7 +10,7 @@
         <h2 class = "message" id = "message">Good Job Onii-chan, now take a break and come play with me!</h1>
 
         <div class="circle">
-            <span class="time" id="time-display">00:00:10</span>
+            <span class="time" id="time-display"></span>
         </div>
 
         <div class="timer-buttons">
