--- a/pomodoro/change_intervals.html
+++ b/pomodoro/change_intervals.html
@@ -26,9 +26,9 @@
         <div class="custom-time">
             <p>Custom Time Interval</p>
             <label for="wtime">Work Time (Minutes)</label>
-            <input type="number" id="wtime">
+            <input type="number" id="wtime"><br>
             <label for="btime">Break Time (Minutes)</label>
-            <input type="number" id="btime">
+            <input type="number" id="btime"><br>
             <button id="submit-times">Submit</button>
         </div>
         
