--- a/pomodoro/break.html
+++ b/pomodoro/break.html
@@ -21,7 +21,7 @@
 
 
         
-        <a href="/popup.html" class="button"><img src="/images/back_arrow.png" width = "25" height = "25"></a>
+        <a href="/popup.html" class="button"><img src="/images/back_arrow_2.png" width = "25" height = "25"></a>
         <script src="break.js"></script>
     </body>
 
