--- a/pomodoro/popup.html
+++ b/pomodoro/popup.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="timer.css"> 
     </head>
     <body>
+        <img src="images/anidoro.png" alt="" width="300" height="60">
         <h1 class = "title" id = "title">Work Time!</h1>
 
         <div class="circle">
